# smart-desk

./: .clang-format  CMakeLists.txt  README.md
main/: CMakeLists.txt  debug_tasks.c  desk_controls.c  desk_controls.h  events.c  events.h  fan_controller.c  fan_controller.h  fingerprint.c  fingerprint.h  main.c  temperature_sensor.c  temperature_sensor.h
main/drivers/: debug_tasks.c  debug_tasks.h  desk_controls.c  desk_controls.h  events.c  events.h  fan_controller.c  fan_controller.h  fingerprint.c  fingerprint.h  temperature_sensor.c  temperature_sensor.h
main/tasks/: fan_control_task.c  fan_control_task.h  force_task.c  height_control_task.c  height_control_task.h  identify_task.c  identify_task.h  ipc.c  ipc.h  power_control_task.c  power_control_task.h  system_manager_task.c  system_manager_task.h  temperature_task.c  temperature_task.h
